# mkl-spmxv-example

./: .gitignore  README.md
results/: test1.txt  test1_failures.txt
scripts/: sampler.py
src/: CMakeLists.txt  intel-spmxv.c  mm-utils.c
src/include/: mm-utils.h
